[gd_scene load_steps=7 format=3 uid="uid://cambklpogpvbx"]

[ext_resource type="Texture2D" uid="uid://cncei0pm6ycu0" path="res://art/npc/king.png" id="1_u0xc8"]
[ext_resource type="Script" uid="uid://cmkylkgphm5qj" path="res://scripts/npc.gd" id="1_xg164"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jnxad"]
size = Vector2(13, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_n16l4"]
radius = 37.0135

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phna3"]
bg_color = Color(0.298039, 0.6, 0.6, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_wt83h"]
font_size = 40

[node name="NPC" type="StaticBody2D"]
script = ExtResource("1_xg164")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.03, 0.03)
texture = ExtResource("1_u0xc8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_jnxad")

[node name="DialogueArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueArea"]
shape = SubResource("CircleShape2D_n16l4")

[node name="SpeechLabel" type="Label" parent="."]
visible = false
offset_left = -25.0
offset_top = -36.0
offset_right = 351.0
offset_bottom = 36.0
scale = Vector2(0.125, 0.125)
theme_override_styles/normal = SubResource("StyleBoxFlat_phna3")
label_settings = SubResource("LabelSettings_wt83h")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="DialogueArea" to="." method="_on_dialogue_area_body_entered"]
[connection signal="body_exited" from="DialogueArea" to="." method="_on_dialogue_area_body_exited"]
